--- a/embedded-tomcat/pom.xml
+++ b/embedded-tomcat/pom.xml
@@ -46,7 +46,12 @@
 		<groupId>com.sun.jersey</groupId>
 		<artifactId>jersey-server</artifactId>
 		<version>1.8</version>
-	</dependency>		
+	</dependency>
+    <dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>		
 </dependencies>
   <build>
     <finalName>embeddedTomcatSample</finalName>
