--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nfactorial</groupId>
     <artifactId>auth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>auth</name>
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+	<docker.image.prefix>abhisheknn</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -91,11 +92,30 @@
                         <goals>
                             <goal>npm</goal>
                         </goals>
-
-                        <phase>test</phase>
+			<phase>test</phase>
                     </execution>
                 </executions>
             </plugin>
+	<plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.3.6</version>
+            <configuration>
+                <repository>${docker.image.prefix}/${project.artifactId}</repository>
+	<buildArgs>
+		<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+	</buildArgs>
+            </configuration>
+	<executions>
+	<execution>
+		<id>default</id>
+		<phase>install</phase>
+		<goals>
+			<goal>build</goal>
+		</goals>
+	</execution>
+	</executions>
+        </plugin>	
         </plugins>
     </build>
 
