--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -7,7 +7,9 @@ pipeline {
    stages {
 	     stage('Build') {
             steps {
-               sh 'mvn install'
+              sh ''' cd auth
+                     mvn install
+                 '''
             }
         }
     }
