--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -12,5 +12,14 @@ pipeline {
                  '''
             }
         }
+     stage('Push image') {
+        /* Finally, we'll push the image with two tags:
+         * First, the incremental build number from Jenkins
+         * Second, the 'latest' tag.
+         * Pushing multiple tags is cheap, as all the layers are reused. */
+        docker.withRegistry('https://registry.hub.docker.com', 'dockerhubcredentials') {
+            app.push("latest")
+        }
     }
+  }
 }
