--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -18,8 +18,10 @@ pipeline {
          * Second, the 'latest' tag.
          * Pushing multiple tags is cheap, as all the layers are reused. */
        steps {
+         script {
         docker.withRegistry('https://registry.hub.docker.com', 'dockerhubcredentials') {
             app.push("latest")
+        }
         }
        }
     }
