--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 	     stage('Build') {
             steps {
               sh ''' cd auth
-                     mvn install
+                     mvn install -X
                  '''
             }
         }
