--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -18,7 +18,12 @@ pipeline {
          * Second, the 'latest' tag.
          * Pushing multiple tags is cheap, as all the layers are reused. */
        steps {
-          sh 'docker push registry.hub.docker.com/abhisheknn/auth:latest'
+         script {
+        docker.withRegistry('https://registry.hub.docker.com', 'dockerhubcredentials') {
+            def authImage = docker.build("registry.hub.docker.com/abhisheknn/auth:latest")
+             authImage.push()
+        }
+        }
                  
        }
     }
