--- a/auth/Jenkinsfile
+++ b/auth/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
          * Pushing multiple tags is cheap, as all the layers are reused. */
        steps {
          script {
-        docker.withRegistry('https://registry.hub.docker.com', 'dockerhubcredentials') {
+        docker.withRegistry('https://registry.hub.docker.com') {
             def authImage = docker.build("registry.hub.docker.com/abhisheknn/auth:latest")
              authImage.push()
         }
